Fixed spacing on board, fixed cursor behavior and disabled dropzone when image is loaded

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -8,7 +8,7 @@
   // align-items: center;
   flex-direction: column;
   display: flex;
-  height: 100%;
+  // height: 100%;
   justify-content: space-between;
   width: 100%;
 
@@ -31,8 +31,9 @@
 
 .board-square {
   align-items: center;
+  aspect-ratio: 1/1;
   display: flex;
-  height: 100%;
+  // height: 100%;
   justify-content: center;
   width: 100%;
 
